--- a/DeepakRatingSystem.html
+++ b/DeepakRatingSystem.html
@@ -101,10 +101,12 @@
         }
         var change = [];
         var exp = (res == 1 && p1r > p2r) || (res == 2 && p2r > p1r) || res == 0;
-        var f = function(a,b) {
-          return 2 + Math.sqrt(Math.abs(p1r - p2r)) * int(0.1,(int(0.1,b,Infinity)) / (int(0.1,a,Infinity)),5);
+        var f = function(a,b,x) {
+          var t = (2 + Math.sqrt(Math.abs(p1r - p2r)) * int(0.1,(int(0.1,b,Infinity)) / (int(0.1,a,Infinity)),5)) * 0.99 ** moves;
+          if(x == 1) { t = Math.sqrt(t); }
+          return t;
         }
-        change = [f(p1h,p2h),f(p2h,p1h)];
+        change = [f(p1h,p2h,exp),f(p2h,p1h,exp)];
         console.log(change);
         return change;
       }
