--- a/DeepakRatingSystem.html
+++ b/DeepakRatingSystem.html
@@ -13,7 +13,7 @@
         color: rgb(0,128,0);
       }
       .bad {
-        color: rgb(0,128,0);
+        color: rgb(128,0,0);
       }
       .rating {
         font-size: 22pt;
@@ -110,6 +110,7 @@
         var sign = function(x) {
           return Math.round(x / Math.abs(x));
         };
+        var versround
         var int = function(l,x,u) {
           if (x > u) { return u; }
           if (x < l) { return l; }
@@ -118,11 +119,11 @@
         var change = [];
         var exp = (res == 1 && p1r > p2r) || (res == 2 && p2r > p1r) || res == 0;
         var f = function(a,b,x) {
-          var t = (2 + Math.sqrt(Math.abs(p1r - p2r)) * int(0.1,(int(0.1,b,Infinity)) / (int(0.1,a,Infinity)),5)) * 0.99 ** moves;
+          var t = (2 + Math.sqrt(Math.abs(p1r - p2r)) * int(0.1,(int(0.1,b,Infinity)) / (int(0.1,a,Infinity)),15)) * 0.99 ** moves;
           if(x == 1) { t = Math.sqrt(t); }
           return t;
         }
-        change = [f(p1h,p2h,exp),f(p2h,p1h,exp)];
+        change = [Math.round(100 * f(p1h,p2h,exp)) / 100,Math.round(100 * f(p2h,p1h,exp)) / 100];
         console.log(change);
         return change;
       }
@@ -131,7 +132,7 @@
         document.getElementById("start2").innerHTML = document.getElementById("p2rating").value;
         document.getElementById("change1").innerHTML = `<b class="good">+${ratingChange(document.getElementById("p1rating").value,document.getElementById("p1recent").value,document.getElementById("p2rating").value,document.getElementById("p2recent").value,document.getElementById("result").value,document.getElementById("moves").value)[0]}</b>`;
         document.getElementById("change2").innerHTML = `<b class="bad">-${ratingChange(document.getElementById("p1rating").value,document.getElementById("p1recent").value,document.getElementById("p2rating").value,document.getElementById("p2recent").value,document.getElementById("result").value,document.getElementById("moves").value)[1]}</b>`;
-        document.getElementById("new1").innerHTML = document.getElementById("p1rating").value + ratingChange(document.getElementById("p1rating").value,document.getElementById("p1recent").value,document.getElementById("p2rating").value,document.getElementById("p2recent").value,document.getElementById("result").value,document.getElementById("moves").value)[0];
+        document.getElementById("new1").innerHTML = Number(document.getElementById("p1rating").value) + Number(ratingChange(document.getElementById("p1rating").value,document.getElementById("p1recent").value,document.getElementById("p2rating").value,document.getElementById("p2recent").value,document.getElementById("result").value,document.getElementById("moves").value)[0]);
         document.getElementById("new2").innerHTML = document.getElementById("p2rating").value - ratingChange(document.getElementById("p1rating").value,document.getElementById("p1recent").value,document.getElementById("p2rating").value,document.getElementById("p2recent").value,document.getElementById("result").value,document.getElementById("moves").value)[1];
       },0)
     </script>
