--- a/DeepakRatingSystem.html
+++ b/DeepakRatingSystem.html
@@ -97,10 +97,10 @@
         </td>
       </tr>
       <tr>
-        <td id="new1" style="text-align: center;" class="rating">
+        <td id="new1" style="text-align: center; padding: 15pt;" class="rating">
           
         </td>
-        <td id="new2" style="text-align: center;" class="rating">
+        <td id="new2" style="text-align: center; padding: 15pt;" class="rating">
           
         </td>
       </tr>
@@ -132,8 +132,8 @@
         document.getElementById("start2").innerHTML = document.getElementById("p2rating").value;
         document.getElementById("change1").innerHTML = `<b class="good">+${ratingChange(document.getElementById("p1rating").value,document.getElementById("p1recent").value,document.getElementById("p2rating").value,document.getElementById("p2recent").value,document.getElementById("result").value,document.getElementById("moves").value)[0]}</b>`;
         document.getElementById("change2").innerHTML = `<b class="bad">-${ratingChange(document.getElementById("p1rating").value,document.getElementById("p1recent").value,document.getElementById("p2rating").value,document.getElementById("p2recent").value,document.getElementById("result").value,document.getElementById("moves").value)[1]}</b>`;
-        document.getElementById("new1").innerHTML = Number(document.getElementById("p1rating").value) + Number(ratingChange(document.getElementById("p1rating").value,document.getElementById("p1recent").value,document.getElementById("p2rating").value,document.getElementById("p2recent").value,document.getElementById("result").value,document.getElementById("moves").value)[0]);
-        document.getElementById("new2").innerHTML = document.getElementById("p2rating").value - ratingChange(document.getElementById("p1rating").value,document.getElementById("p1recent").value,document.getElementById("p2rating").value,document.getElementById("p2recent").value,document.getElementById("result").value,document.getElementById("moves").value)[1];
+        document.getElementById("new1").innerHTML = "<b>" + Number(document.getElementById("p1rating").value) + Number(ratingChange(document.getElementById("p1rating").value,document.getElementById("p1recent").value,document.getElementById("p2rating").value,document.getElementById("p2recent").value,document.getElementById("result").value,document.getElementById("moves").value)[0]) + "</b>";
+        document.getElementById("new2").innerHTML = "<b>" + document.getElementById("p2rating").value - ratingChange(document.getElementById("p1rating").value,document.getElementById("p1recent").value,document.getElementById("p2rating").value,document.getElementById("p2recent").value,document.getElementById("result").value,document.getElementById("moves").value)[1] + "</b>";
       },0)
     </script>
   </body>
