--- a/DeepakRatingSystem.html
+++ b/DeepakRatingSystem.html
@@ -119,7 +119,7 @@
         var change = [];
         var exp = (res == 1 && p1r > p2r) || (res == 2 && p2r > p1r) || res == 0;
         var f = function(a,b,x,h) {
-          var t = (2 + Math.sqrt(Math.abs(p1r - p2r) ** (1.5 - int(0,h,30) / 60)) * int(0.1,(int(0.1,b,Infinity)) / (int(0.1,a,Infinity)),15)) * 0.99 ** moves;
+          var t = int(0,(2 + Math.sqrt(Math.abs(p1r - p2r) ** (1.5 - int(0,h,30) / 60)) * int(0.1,(int(0.1,b,Infinity)) / (int(0.1,a,Infinity)),15)) * 0.99 ** moves - Math.abs(p1r - p2r) * x / 3,Infinity);
           if(x == 1) { t = Math.sqrt(t); }
           return t;
         }
